<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.plokhotnyuk.actors</groupId>
    <artifactId>actors</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Actors</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <scala.version>2.11.6</scala.version>
        <benchmark.args>-server -Xms4096m -Xmx4096m -XX:NewSize=3584m -XX:MaxNewSize=3584m -Xss256k -XX:+UseG1GC -XX:+TieredCompilation -XX:+UseNUMA -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</benchmark.args>
    </properties>
    <prerequisites>
        <maven>3.1</maven>
    </prerequisites>
    <repositories>
        <repository>
            <id>sonatype-staging</id>
            <url>https://oss.sonatype.org/content/groups/staging</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.11</artifactId>
            <version>2.3.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.liftweb</groupId>
            <artifactId>lift-actor_2.11</artifactId>
            <version>3.0-M5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-actors</artifactId>
            <version>${scala.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scalaz</groupId>
            <artifactId>scalaz-concurrent_2.11</artifactId>
            <version>7.1.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-junit_2.11</artifactId>
            <version>2.4.17</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <phase>none</phase>
                        </execution>
                        <execution>
                            <id>default-testCompile</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <scalaVersion>${scala.version}</scalaVersion>
                        <charset>${project.build.sourceEncoding}</charset>
                        <args>
                            <arg>-target:jvm-${java.major.version}</arg>
                            <arg>-optimise</arg>
                            <arg>-deprecation</arg>
                            <arg>-unchecked</arg>
                            <arg>-feature</arg>
                            <arg>-language:implicitConversions</arg>
                            <arg>-Xlog-reflective-calls</arg>
                            <arg>-Xfuture</arg>
                            <arg>-Xlint</arg>
                        </args>
                        <jvmArgs>
                            <jvmArg>-server</jvmArg>
                            <jvmArg>-Xms512m</jvmArg>
                            <jvmArg>-Xmx512m</jvmArg>
                            <jvmArg>-Xss1m</jvmArg>
                            <jvmArg>-XX:+TieredCompilation</jvmArg>
                        </jvmArgs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>testCompile</id>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.18.1</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                        <useFile>false</useFile>
                        <includes>
                            <include>**/*Spec.class</include>
                        </includes>
                        <argLine>${benchmark.args} ${jsr166.args}</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>travis</id>
            <properties>
                <benchmark.args>-server -Xms2560m -Xmx2560m -XX:NewSize=2240m -XX:MaxNewSize=2240m -Xss256k -XX:+UseG1GC -XX:+TieredCompilation -XX:+UseNUMA -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</benchmark.args>
            </properties>
        </profile>
        <profile>
            <id>jdk7</id>
            <properties>
                <java.major.version>1.7</java.major.version>
                <jsr166.args>-Xbootclasspath/p:jsr166-4jdk7.jar</jsr166.args>
                <maven.compiler.source>1.7</maven.compiler.source>
                <maven.compiler.target>1.7</maven.compiler.target>
            </properties>
            <activation>
                <jdk>1.7</jdk>
            </activation>
        </profile>
        <profile>
            <id>jdk8</id>
            <properties>
                <java.major.version>1.8</java.major.version>
                <jsr166.args>-Xbootclasspath/p:jsr166.jar</jsr166.args>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
            </properties>
            <activation>
                <jdk>1.8</jdk>
            </activation>
        </profile>
    </profiles>
</project>
